Fix too large image thumb for small-width view

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -41,6 +41,8 @@
 
     .unexpanded img {
         resize: both;
+        width: 100%;
+        height: 100%;
         max-width: 350px;
         max-height: 350px;
     }
